--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@ h1 {
   font-size: 1.875rem /* 30px */;
   line-height: 2.25rem /* 36px */;
   font-weight: 600;
+  padding-bottom: 2.5rem;
 }
 
 h2 {
@@ -76,7 +77,7 @@ h2 {
   }
 
   .padding-container {
-    @apply px-6 py-6 lg:px-20 3xl:px-24;
+    @apply px-6 py-6 lg:px-20 3xl:px-24 flex flex-1 flex-col;
   }
 
   .bold-88 {
