--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ h2 {
   }
 
   .padding-container {
-    @apply px-6 py-6 lg:px-20 3xl:px-24 flex flex-1 flex-col;
+    @apply px-6 py-6 lg:px-20 3xl:px-24 flex flex-1;
   }
 
   .bold-88 {
