--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,12 @@ h2 {
   font-weight: 600;
 }
 
+h3 {
+  font-size: 1.05rem /* 20px */;
+  line-height: 1.5rem /* 28px */;
+  font-weight: 600;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
